--- a/styles/nav.css
+++ b/styles/nav.css
@@ -14,6 +14,7 @@ nav {
   gap: 0.8rem;
   border-radius: 3rem;
   backdrop-filter: blur(15px);
+  -webkit-backdrop-filter: blur(15px);
 }
 
 nav a {
